refactor : 프로젝트 노드 엔티티 수정 및 로직 변경(#13) (#146)
* refactor : 프로젝트 노드 엔티티 수정 및 로직 변경

* fix : gemini model 변경